--- a/gpu_job_template.yaml
+++ b/gpu_job_template.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1 # Jobs Default K8 API
 kind: Job # This tells kubernetes what kind of class it is working with
 metadata:
-  name: hus8 # Name of the Job
+  name: hus4 # Name of the Job
 spec:
   #completions: 100
   parallelism: 1
@@ -40,7 +40,8 @@ spec:
       - name: torch15
         #image: nvidia/cuda:9.0-base
         #image: anibali/pytorch:cuda-10.0
-        image: anibali/pytorch:1.5.0-cuda10.2
+        #image: anibali/pytorch:1.5.0-cuda10.2
+        image: hushell/uploadai:cuda11.0_torch1.7
         volumeMounts: # Container reference to volumes define above
         - name: hushell # Name of the volume define above
           mountPath: /app/hushell # Location of where to mount it in the container
